fixed updated today spacing on mobile

--- a/static/index.scss
+++ b/static/index.scss
@@ -36,7 +36,7 @@ body {
 //   max-width: 50rem;
 // }
 .updated-today {
-  width: 2rem;
+  width: 2.3rem;
   margin-right: 0px !important;
   padding: 0px 0px 0px 0px !important;
 }
